# GeMMMapReduce

./: .gitignore  README.md  pyproject.toml  setup.py  test_custom_attention.py  test_custom_op.py  test_gemm_mr_attention_cpp.py
cpp_src/: attention_utils.h  custom_attention.cpp  custom_proj_fold_kernel.cu  gemm_map_reduce_attention.cpp  relu_matmul.cpp
gemmmapreduce/: attention.py  check_cuda.py  core.py  entropy.py  kernel.py  mlp.py  penicillin.py  sampling.py  xentropy.py  xentropy_distil.py
